--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
  * File Name: style.css
  */
 
-@import url("https://app.blys.vip/css/bootstrap.css");
-@import url("https://app.blys.vip/css/styles.css");
-@import url("https://app.blys.vip/css/animate.min.css");
-@import url("https://app.blys.vip/css/font-awesome.min.css");
-@import url("https://app.blys.vip/css/shortcodes.css");
-@import url("https://app.blys.vip/css/owl.carousel.css");
-@import url("https://app.blys.vip/css/owl.theme.css");
-@import url("https://app.blys.vip/css/owl.transitions.css");
+@import url("/css/bootstrap.css");
+@import url("/css/styles.css");
+@import url("/css/animate.min.css");
+@import url("/css/font-awesome.min.css");
+@import url("/css/shortcodes.css");
+@import url("/css/owl.carousel.css");
+@import url("/css/owl.theme.css");
+@import url("/css/owl.transitions.css");
